--- a/pre/scss/components/_font.scss
+++ b/pre/scss/components/_font.scss
@@ -1,8 +1,4 @@
-.title-xl {
-    @include font(60, Bold);
-    line-height: 1.3
-}
-
+.title-xl,
 h1,
 h2,
 h3,
@@ -10,7 +6,10 @@ h4,
 h5,
 h6 {
     font-weight: weight(Bold);
-    line-height: 1.3
+}
+
+.title-xl {
+    @include font(60);
 }
 
 h1 {
@@ -37,17 +36,44 @@ h6 {
     @include font(16);
 }
 
-.text-l {
+.body-1 {
     @include font(18);
+    line-height: 1.5;
+}
+
+.body-2 {
+    @include font(15);
+    line-height: 1.5;
 }
 
 .capital {
     @include font(14);
-    line-height: 1.3;
 
 }
 
-@include max-to(pad) {
+a {
+    @include a-color(white, color(gray-2));
+}
+
+%body-1 {
+    @include font(18);
+    line-height: 1.5;
+}
+
+%body-2 {
+    @include font(15);
+    line-height: 1.5;
+}
+
+%capital {
+    @include font(14);
+}
+
+@include max-to(laptop) {
+    .title-xl {
+        @include font(60);
+    }
+
     h1 {
         @include font(24);
     }
@@ -72,7 +98,12 @@ h6 {
         @include font(14);
     }
 
-    .text-l {
+    .body-1 {
+        @include font(15);
+        line-height: 1.3;
+    }
+
+    .body-2 {
         @include font(13);
         line-height: 1.3;
     }
@@ -81,17 +112,4 @@ h6 {
         @include font(12);
 
     }
-}
-
-%text-l {
-    @include font(18);
-    line-height: 1.3;
-}
-
-%capital {
-    @include font(14);
-}
-
-a {
-    @include a-color(white, color(gray-2));
 }
