--- a/css/styleA.css
+++ b/css/styleA.css
@@ -478,7 +478,7 @@ main section .container {
   left: 4.5rem;
   bottom: -1.25rem;
   width: 40.625rem;
-  padding: 2rem;
+  height: 25rem;
   display: flex;
   flex-wrap: wrap;
   gap: 1.25rem;
@@ -496,7 +496,6 @@ main section .container {
   flex: 100%;
 }
 #keyvision .captions div.active {
-  position: initial;
   opacity: 1;
   transition-duration: 1.5s;
   animation: cap-move 1s;
@@ -522,6 +521,7 @@ main section .container {
   #keyvision .captions {
     position: initial;
     width: 100%;
+    height: 18.75rem;
     padding: 0 0 5.625rem;
   }
   #keyvision .captions div {
@@ -532,16 +532,19 @@ main section .container {
 }
 
 #game {
-  background-image: url(../img/game-bg.jpg);
-  background-size: 100%;
+  background-image: url(../img/bg/game-bg.jpg);
+  background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
 #game .container {
-  height: 50svw;
+  min-height: 50svw;
   padding: 9.375rem 3.75rem 3.125rem;
   display: flex;
   gap: 1.25rem;
   align-items: flex-start;
+  position: inherit;
+  z-index: 2;
 }
 #game .desc {
   flex: 25%;
@@ -580,6 +583,7 @@ main section .container {
   opacity: 0;
   transition-duration: 0.3s;
   transition-delay: 0.1s;
+  z-index: 1;
 }
 #game .slick .slick-slide::before {
   content: "";
@@ -591,17 +595,32 @@ main section .container {
   transform: rotate(45deg);
   transition: background-color 0.2s, left 0.3s, right 0.3s;
 }
-#game .slick .slick-slide:hover .hover {
-  opacity: 1;
-}
-#game .slick .slick-slide:hover::before {
-  left: 0;
-  right: 0;
-  background-color: black;
+@media (hover: hover) {
+  #game .slick .slick-slide:hover .hover {
+    opacity: 1;
+  }
+  #game .slick .slick-slide:hover::before {
+    left: 0;
+    right: 0;
+    background-color: black;
+  }
 }
 #game .slick .slick-arrow {
   top: calc(100% + 2.5rem);
   bottom: auto;
+}
+#game::before, #game::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+#game::before {
+  content: url(../img/bg/game-mask-top.png);
+  top: 0;
+}
+#game::after {
+  content: url(../img/bg/game-mask-bottom.png);
+  bottom: -0.5rem;
 }
 @media (max-width: 1440px) {
   #game .container {
@@ -632,12 +651,19 @@ main section .container {
   }
   #game .slick .slick-slide {
     border-radius: 0rem;
+    cursor: default;
   }
   #game .slick .slick-slide .hover {
     position: initial;
     transform: none;
     opacity: 1;
     padding: 0.5rem 0;
+  }
+  #game .slick .slick-slide .hover button {
+    padding: 0.59375rem 1.25rem;
+  }
+  #game .slick .slick-slide:hover::before {
+    background-color: transparent;
   }
   #game .slick .slick-dots {
     right: 0;
@@ -647,52 +673,6 @@ main section .container {
 #nft {
   position: relative;
   padding: 3.75rem 3.75rem 52.5rem 0;
-  /*
-  .slick {
-      z-index: 1;
-      flex: 1;
-      max-width: size(720);
-
-      .slick-slide {
-          border-radius: size(30);
-          overflow: hidden;
-          background-repeat: no-repeat;
-          position: relative;
-          transform: scale(.75);
-          transition-property: transform;
-
-          .content {
-              opacity: 0;
-              transition-property: opacity;
-              background-color: color(gray-9);
-
-              .caption {
-                  padding: size(20) size(20) size(30);
-
-                  p {
-                      margin-top: size(8);
-                  }
-
-                  .tags {
-                      margin-top: size(16);
-                  }
-
-                  button {
-                      width: 100%;
-                  }
-              }
-          }
-
-          &.slick-current {
-              transform: scale(1);
-
-              .content {
-                  opacity: 1;
-              }
-          }
-      }
-  }
-  */
 }
 #nft .container {
   display: flex;
@@ -709,7 +689,7 @@ main section .container {
 #nft .carousel .swiper {
   overflow: visible;
 }
-#nft .carousel .swiper .swiper-slide {
+#nft .carousel .swiper-slide {
   border-radius: 1.875rem;
   overflow: hidden;
   background-color: #1d1d1d;
@@ -719,39 +699,39 @@ main section .container {
   position: relative;
   transform: scale(0.7) !important;
 }
-#nft .carousel .swiper .swiper-slide .content {
+#nft .carousel .swiper-slide .content {
   opacity: 0;
   transition-property: opacity;
   text-align: left;
   background-color: #1d1d1d;
 }
-#nft .carousel .swiper .swiper-slide .content .caption {
+#nft .carousel .swiper-slide .content .caption {
   padding: 1.25rem 1.25rem 1.875rem;
 }
-#nft .carousel .swiper .swiper-slide .content .caption p {
+#nft .carousel .swiper-slide .content .caption p {
   margin-top: 0.5rem;
 }
-#nft .carousel .swiper .swiper-slide .content .caption .tags {
+#nft .carousel .swiper-slide .content .caption .tags {
   margin-top: 1rem;
   flex-direction: row-reverse;
 }
-#nft .carousel .swiper .swiper-slide .content .caption button {
+#nft .carousel .swiper-slide .content .caption button {
   width: 100%;
 }
-#nft .carousel .swiper .swiper-slide-next, #nft .carousel .swiper .swiper-slide-active {
+#nft .carousel .swiper-slide-next, #nft .carousel .swiper-slide-active {
   transition-duration: 0.3s !important;
   box-shadow: -0.75rem 0.5rem 1.5rem rgba(0, 0, 0, 0.6);
 }
-#nft .carousel .swiper .swiper-slide-next {
+#nft .carousel .swiper-slide-next {
   transform: scale(0.85) !important;
   z-index: 2 !important;
 }
-#nft .carousel .swiper .swiper-slide-active {
+#nft .carousel .swiper-slide-active {
   transform: scale(1) !important;
   z-index: 3 !important;
   cursor: pointer;
 }
-#nft .carousel .swiper .swiper-slide-active .content {
+#nft .carousel .swiper-slide-active .content {
   opacity: 1;
 }
 #nft .carousel .swiper.coming-soon .swiper-slide {
@@ -781,9 +761,10 @@ main section .container {
   right: -6.25rem;
   bottom: 0;
   z-index: 0;
-  background-image: url(../img/nft-bg.jpg);
-  background-position: top center;
-  background-size: 100%;
+  background-color: black;
+  background-image: url(../img/bg/nft-bg.jpg);
+  background-position: bottom center;
+  background-size: cover;
   background-repeat: no-repeat;
   -webkit-clip-path: polygon(0 6.25rem, 100% 14.375rem, 100% 100%, 0% 100%);
           clip-path: polygon(0 6.25rem, 100% 14.375rem, 100% 100%, 0% 100%);
@@ -791,6 +772,41 @@ main section .container {
 @media (max-width: 1440px) {
   #nft {
     padding: 4.1666666667svw 4.1666666667svw 58.3333333333svw 0;
+  }
+}
+@media (max-width: 1024px) {
+  #nft {
+    padding: 3.75rem 1rem 3.75rem 0;
+  }
+  #nft .container {
+    flex-wrap: wrap;
+  }
+  #nft .carousel,
+  #nft .desc {
+    flex: 100%;
+  }
+  #nft .carousel {
+    order: 2;
+    padding: 0 0 3.75rem;
+    position: relative;
+  }
+  #nft .carousel .swiper {
+    margin-right: 2.25rem;
+    padding: 1.75rem 0;
+    overflow: hidden;
+  }
+  #nft .carousel .swiper-button-prev {
+    right: 5rem;
+  }
+  #nft .carousel .swiper-button-next {
+    right: 0;
+  }
+  #nft .desc {
+    padding-left: 1rem;
+  }
+  #nft::before {
+    -webkit-clip-path: polygon(0 0, 100% 8.125rem, 100% 100%, 0% 100%);
+            clip-path: polygon(0 0, 100% 8.125rem, 100% 100%, 0% 100%);
   }
 }
 
@@ -852,9 +868,14 @@ main section .container {
     margin: 0.5555555556svw auto 2.2222222222svw;
   }
 }
+@media (max-width: 1024px) {
+  #tutorial {
+    margin-top: 0;
+  }
+}
 
 #zkz {
-  background-image: url(../img/zkz-bg.jpg);
+  background-image: url(../img/bg/zkz-bg.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
   height: 45svw;
@@ -937,8 +958,10 @@ a {
   transition-property: color;
   text-decoration: none;
 }
-a:hover {
-  color: lightgray;
+@media (hover: hover) {
+  a:hover {
+    color: lightgray;
+  }
 }
 
 #login ul li, .tab li span, body, #tutorial .content .tab-content li p {
@@ -950,7 +973,7 @@ a:hover {
 .dropdown .dropdown-content, .dropdown button, button,
 input[type=button],
 input[type=submit],
-a.button, header, header .login button, #nft .carousel .swiper .swiper-slide .content .caption p {
+a.button, header, header .login button, #nft .carousel .swiper-slide .content .caption p {
   font-size: 0.9375rem;
   font-weight: 500;
   line-height: 1.5;
@@ -1249,6 +1272,11 @@ header .login button[disabled] {
   background-color: rgba(255, 255, 255, 0.2);
   padding: 0.25rem 0.75rem;
   border-radius: 0.25rem;
+}
+@media (max-width: 1024px) {
+  .tags {
+    margin: 0.5rem 0 1.25rem;
+  }
 }
 
 .tab {
