--- a/pre/scss/layout/_main.scss
+++ b/pre/scss/layout/_main.scss
@@ -26,10 +26,22 @@ main {
     max-width: size(1440);
     position: relative;
 
-    .slick {
+    .swiper {
         border-radius: size(30) size(30) size(30) 0;
-        overflow: hidden;
-        position: relative;
+
+        &-wrapper {
+            margin-bottom: size(-8);
+            position: relative;
+        }
+
+        &-button-prev,
+        &-button-next {
+            bottom: size(20);
+        }
+
+        &-pagination-bullets {
+            left: size(-40) !important;
+        }
     }
 
     .mask {
@@ -37,9 +49,9 @@ main {
         left: calc(size(20) + size(60) - size(2));
         bottom: size(-1);
         right: size(300);
-        height: size(90);
+        height: size(60);
         background-color: color(primary);
-        transform: translateY(size(30));
+        z-index: 1;
 
         &::before,
         &::after {
@@ -48,22 +60,22 @@ main {
             background-repeat: no-repeat;
             background-size: contain;
             bottom: 0;
-            height: size(90);
-            transform: translateY(size(-30));
         }
 
         &::before {
             right: calc(100% - size(1));
-            background-image: url(../img/kv-mask-before.svg);
+            background-image: url(../img/maskbar-before-out.svg);
             background-position: bottom left;
             width: size(60);
+            height: size(90);
         }
 
         &::after {
             left: calc(100% - size(1));
-            background-image: url(../img/kv-mask-after.svg);
+            background-image: url(../img/maskbar-after.svg);
             background-position: bottom right;
             width: size(80);
+            height: size(60);
         }
     }
 
@@ -73,7 +85,6 @@ main {
         bottom: size(-20);
         width: size(650);
         height: size(400);
-        // padding: size(32);
         display: flex;
         flex-wrap: wrap;
         gap: size(20);
@@ -113,16 +124,17 @@ main {
 
     // pad ~ 1024
     @include max-to(pad) {
-        margin: size(60) auto 0;
+        margin: size(60) auto;
         padding: 0 size(16);
 
         .mask {
             left: calc(size(16) + size(60) - size(2));
             bottom: auto;
-            top: calc(((100svw - size(32)) * .47) - size(90) + size(1));
+            top: calc(((100svw - size(32)) * .47) - size(60) + size(1));
         }
 
         .captions {
+            margin-top: size(32);
             position: initial;
             width: 100%;
             height: size(300);
@@ -133,6 +145,24 @@ main {
                 left: size(16);
                 right: size(16);
             }
+        }
+    }
+
+
+    // small-pad ~ 768
+    @include max-to(small-pad) {
+        .swiper {
+            &-pagination-bullets {
+                left: size(-16) !important;
+            }
+        }
+
+        .mask {
+            top: calc(((100svw - size(32)) * .939) - size(60) + size(1));
+        }
+
+        .captions {
+            height: size(200);
         }
     }
 }
@@ -170,13 +200,30 @@ main {
         }
     }
 
-    .slick {
+    .carousel {
         flex: 1;
         max-width: calc(75% - size(20));
         padding-right: size(58);
+        position: relative;
+    }
 
-        .slick-slide {
-            margin: 0 size(10);
+    .swiper {
+        border-radius: size(30);
+
+        &-button-prev,
+        &-button-next {
+            top: calc(100% + size(40));
+        }
+
+        &-button-prev {
+            right: size(80);
+        }
+
+        &-button-next {
+            right: 0;
+        }
+
+        &-slide {
             overflow: hidden;
             border-radius: size(30);
             cursor: pointer;
@@ -184,6 +231,7 @@ main {
 
             img {
                 border-radius: size(30);
+                margin-bottom: size(-8);
             }
 
             .hover {
@@ -224,11 +272,6 @@ main {
                 }
             }
         }
-
-        .slick-arrow {
-            top: calc(100% + size(40));
-            bottom: auto;
-        }
     }
 
     &::before,
@@ -259,12 +302,14 @@ main {
             min-width: svw(300);
         }
 
-        .slick {
-            .slick-slide {
-                &:hover {
-                    &::before {
-                        left: size(-12);
-                        right: size(-12);
+        .swiper {
+            &-slide {
+                @media (hover: hover) {
+                    &:hover {
+                        &::before {
+                            left: size(-12);
+                            right: size(-12);
+                        }
                     }
                 }
             }
@@ -281,16 +326,18 @@ main {
         }
 
         .desc,
-        .slick {
+        .carousel {
             flex: 100%;
             max-width: 100%;
         }
 
-        .slick {
+        .carousel {
             padding-right: size(24);
             margin-bottom: size(20);
+        }
 
-            .slick-slide {
+        .swiper {
+            &-slide {
                 border-radius: size(0);
                 cursor: default;
 
@@ -305,33 +352,37 @@ main {
                     }
                 }
 
-                &:hover {
-                    &::before {
-                        background-color: transparent;
+                @media (hover: hover) {
+                    &:hover {
+                        &::before {
+                            background-color: transparent;
+                        }
                     }
                 }
-            }
-
-            .slick-dots {
-                right: 0;
             }
         }
     }
 
 
-    // mobile ~ 768
-    @include max-to(mobile) {
-        background-image: url(../img/game-bg-m.jpg);
+    // small-pad ~ 768
+    @include max-to(small-pad) {
+        background-image: url(../img/bg/game-bg-m.jpg);
+        background-size: cover;
 
         .container {
-            height: 200svw;
+            margin-bottom: size(92);
+        }
+
+        .swiper {
+            border-radius: size(30) size(30) 0 0;
         }
     }
 }
 
 #nft {
     position: relative;
-    padding: size(60) size(60) size(840) 0;
+    padding: size(60) size(60) size(60) 0;
+    overflow: hidden;
 
     .container {
         display: flex;
@@ -442,26 +493,22 @@ main {
         top: 0;
         left: size(-100);
         right: size(-100);
-        bottom: 0;
+        bottom: size(-1);
         z-index: 0;
         background-color: black;
-        background-image: url(../img/bg/nft-bg.jpg);
-        background-position: bottom center;
-        background-size: cover;
-        background-repeat: no-repeat;
         clip-path: polygon(0 size(100), 100% size(230), 100% 100%, 0% 100%);
     }
 
 
     // PC ~ 1440
     @include max-to(pc) {
-        padding: svw(60) svw(60) svw(840) 0;
+        padding: svw(60) svw(60) svw(60) 0;
     }
 
 
     // pad ~ 1024
     @include max-to(pad) {
-        padding: size(60) size(16) size(60) 0;
+        padding: size(60) size(16) 0 0;
 
         .container {
             flex-wrap: wrap;
@@ -502,13 +549,20 @@ main {
             clip-path: polygon(0 0, 100% size(130), 100% 100%, 0% 100%);
         }
     }
+
+
+    // small-pad ~ 768
+    @include max-to(small-pad) {}
 }
 
 #tutorial {
     position: relative;
-    margin: size(-660) auto 0;
+    margin: 0 auto;
     z-index: 1;
-    padding: size(60);
+    padding: size(220) size(60) size(60);
+    background-image: url(../img/bg/toturial-bg.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
 
     .title {
         width: size(430);
@@ -554,16 +608,16 @@ main {
             bottom: calc(100% - size(1));
             right: 0;
             transform: rotateX(180deg);
+            z-index: -1;
         }
     }
 
+
     // PC ~ 1440
     @include max-to(pc) {
-        margin: svw(-660) auto 0;
-        padding: svw(60);
+        padding: svw(220) svw(60) svw(60);
 
         .content {
-            margin-top: svw(40);
             padding: svw(112) svw(112) 0;
 
             .tab-content {
@@ -580,22 +634,61 @@ main {
         }
     }
 
+
     // pad ~ 1024
     @include max-to(pad) {
-        margin-top: 0;
+        padding: size(20) 0;
+
+        .title {
+            padding: 0 size(16);
+        }
+
+        .content {
+            border-radius: 0;
+            padding: size(32) size(16);
+
+            &::before {
+                right: size(-260);
+            }
+        }
     }
+
+
+    // small-pad ~ 768
+    @include max-to(small-pad) {}
 }
 
 #zkz {
     background-image: url(../img/bg/zkz-bg.jpg);
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 45svw;
+    position: relative;
 
     .container {
         display: flex;
         align-items: center;
         justify-content: center;
+        position: inherit;
+        z-index: 1;
+    }
+
+    &::before,
+    &::after {
+        position: absolute;
+        left: 0;
+        right: 0;
+        z-index: 0;
+    }
+
+    &::before {
+        content: url(../img/bg/zkz-mask-top.png);
+        top: 0;
+    }
+
+    &::after {
+        content: url(../img/bg/zkz-mask-bottom.png);
+        bottom: 0;
     }
 
     // PC ~ 1440
