--- a/pre/scss/styleA.scss
+++ b/pre/scss/styleA.scss
@@ -15,5 +15,5 @@
 @import "components/tags";
 @import "components/tab";
 @import "components/popUp";
-@import "components/slick-custom";
+// @import "components/slick-custom";
 @import "components/swiper-custom";
