--- a/css/styleA.css
+++ b/css/styleA.css
@@ -328,10 +328,10 @@ header.fixed {
   header .options {
     gap: 1.3888888889svw;
   }
-  header .nav > ul {
+  header .options .nav > ul {
     gap: 0.8333333333svw;
   }
-  header .nav > ul > li {
+  header .options .nav > ul > li {
     padding: 0.6944444444svw 1.3888888889svw;
     cursor: pointer;
     border-radius: 0.6944444444svw;
@@ -397,21 +397,51 @@ header.fixed {
 
 footer {
   background-color: black;
-  background-image: url(../img/Rounded-Mask.svg);
+  height: 7.5rem;
+  position: relative;
+}
+footer .mask {
+  position: absolute;
+  top: -0.0625rem;
+  left: calc(100svw - 26.3888888889svw);
+  right: 1.9375rem;
+  height: 3.75rem;
+  background-color: #871B1F;
+  z-index: 0;
+}
+footer .mask::before, footer .mask::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 3.75rem;
   background-repeat: no-repeat;
-  background-size: 100%;
-  height: 9svw;
+  background-size: contain;
+}
+footer .mask::before {
+  right: calc(100% - 0.0625rem);
+  background-image: url(../img/maskbar-after.svg);
+  background-position: bottom left;
+  width: 5rem;
+  transform: rotate(180deg);
+}
+footer .mask::after {
+  left: calc(100% - 0.0625rem);
+  background-image: url(../img/maskbar-before-in.svg);
+  background-position: bottom right;
+  width: 2rem;
 }
 footer .sns {
+  position: inherit;
   width: 100svw;
   padding: 0 1.875rem;
   display: flex;
   justify-content: flex-end;
   gap: 1.25rem;
+  z-index: 1;
 }
 footer .sns li button {
-  font-size: 1.4svw;
-  padding: 0.8svw;
+  font-size: 1.25rem;
+  padding: 0.6875rem;
 }
 
 main {
@@ -438,19 +468,27 @@ main section .container {
   max-width: 90rem;
   position: relative;
 }
-#keyvision .slick {
+#keyvision .swiper {
   border-radius: 1.875rem 1.875rem 1.875rem 0;
-  overflow: hidden;
+}
+#keyvision .swiper-wrapper {
+  margin-bottom: -0.5rem;
   position: relative;
+}
+#keyvision .swiper-button-prev, #keyvision .swiper-button-next {
+  bottom: 1.25rem;
+}
+#keyvision .swiper-pagination-bullets {
+  left: -2.5rem !important;
 }
 #keyvision .mask {
   position: absolute;
   left: 4.875rem;
   bottom: -0.0625rem;
   right: 18.75rem;
-  height: 5.625rem;
+  height: 3.75rem;
   background-color: #871B1F;
-  transform: translateY(1.875rem);
+  z-index: 1;
 }
 #keyvision .mask::before, #keyvision .mask::after {
   content: "";
@@ -458,20 +496,20 @@ main section .container {
   background-repeat: no-repeat;
   background-size: contain;
   bottom: 0;
-  height: 5.625rem;
-  transform: translateY(-1.875rem);
 }
 #keyvision .mask::before {
   right: calc(100% - 0.0625rem);
-  background-image: url(../img/kv-mask-before.svg);
+  background-image: url(../img/maskbar-before-out.svg);
   background-position: bottom left;
   width: 3.75rem;
+  height: 5.625rem;
 }
 #keyvision .mask::after {
   left: calc(100% - 0.0625rem);
-  background-image: url(../img/kv-mask-after.svg);
+  background-image: url(../img/maskbar-after.svg);
   background-position: bottom right;
   width: 5rem;
+  height: 3.75rem;
 }
 #keyvision .captions {
   position: absolute;
@@ -510,15 +548,16 @@ main section .container {
 }
 @media (max-width: 1024px) {
   #keyvision {
-    margin: 3.75rem auto 0;
+    margin: 3.75rem auto;
     padding: 0 1rem;
   }
   #keyvision .mask {
     left: 4.625rem;
     bottom: auto;
-    top: calc((100svw - 2rem) * 0.47 - 5.625rem + 0.0625rem);
+    top: calc((100svw - 2rem) * 0.47 - 3.75rem + 0.0625rem);
   }
   #keyvision .captions {
+    margin-top: 2rem;
     position: initial;
     width: 100%;
     height: 18.75rem;
@@ -528,6 +567,17 @@ main section .container {
     bottom: auto;
     left: 1rem;
     right: 1rem;
+  }
+}
+@media (max-width: 768px) {
+  #keyvision .swiper-pagination-bullets {
+    left: -1rem !important;
+  }
+  #keyvision .mask {
+    top: calc((100svw - 2rem) * 0.939 - 3.75rem + 0.0625rem);
+  }
+  #keyvision .captions {
+    height: 12.5rem;
   }
 }
 
@@ -558,22 +608,35 @@ main section .container {
   margin-top: 0;
   margin-bottom: 2.5rem;
 }
-#game .slick {
+#game .carousel {
   flex: 1;
   max-width: calc(75% - 1.25rem);
   padding-right: 3.625rem;
+  position: relative;
 }
-#game .slick .slick-slide {
-  margin: 0 0.625rem;
+#game .swiper {
+  border-radius: 1.875rem;
+}
+#game .swiper-button-prev, #game .swiper-button-next {
+  top: calc(100% + 2.5rem);
+}
+#game .swiper-button-prev {
+  right: 5rem;
+}
+#game .swiper-button-next {
+  right: 0;
+}
+#game .swiper-slide {
   overflow: hidden;
   border-radius: 1.875rem;
   cursor: pointer;
   position: relative;
 }
-#game .slick .slick-slide img {
+#game .swiper-slide img {
   border-radius: 1.875rem;
+  margin-bottom: -0.5rem;
 }
-#game .slick .slick-slide .hover {
+#game .swiper-slide .hover {
   position: absolute;
   top: 50%;
   left: 0;
@@ -585,7 +648,7 @@ main section .container {
   transition-delay: 0.1s;
   z-index: 1;
 }
-#game .slick .slick-slide::before {
+#game .swiper-slide::before {
   content: "";
   position: absolute;
   top: -6.25rem;
@@ -596,18 +659,14 @@ main section .container {
   transition: background-color 0.2s, left 0.3s, right 0.3s;
 }
 @media (hover: hover) {
-  #game .slick .slick-slide:hover .hover {
+  #game .swiper-slide:hover .hover {
     opacity: 1;
   }
-  #game .slick .slick-slide:hover::before {
+  #game .swiper-slide:hover::before {
     left: 0;
     right: 0;
     background-color: black;
   }
-}
-#game .slick .slick-arrow {
-  top: calc(100% + 2.5rem);
-  bottom: auto;
 }
 #game::before, #game::after {
   position: absolute;
@@ -629,7 +688,9 @@ main section .container {
   #game .desc {
     min-width: 20.8333333333svw;
   }
-  #game .slick .slick-slide:hover::before {
+}
+@media (max-width: 1440px) and (hover: hover) {
+  #game .swiper-slide:hover::before {
     left: -0.75rem;
     right: -0.75rem;
   }
@@ -641,38 +702,50 @@ main section .container {
     gap: 3.75rem;
   }
   #game .desc,
-  #game .slick {
+  #game .carousel {
     flex: 100%;
     max-width: 100%;
   }
-  #game .slick {
+  #game .carousel {
     padding-right: 1.5rem;
     margin-bottom: 1.25rem;
   }
-  #game .slick .slick-slide {
+  #game .swiper-slide {
     border-radius: 0rem;
     cursor: default;
   }
-  #game .slick .slick-slide .hover {
+  #game .swiper-slide .hover {
     position: initial;
     transform: none;
     opacity: 1;
     padding: 0.5rem 0;
   }
-  #game .slick .slick-slide .hover button {
+  #game .swiper-slide .hover button {
     padding: 0.59375rem 1.25rem;
   }
-  #game .slick .slick-slide:hover::before {
+}
+@media (max-width: 1024px) and (hover: hover) {
+  #game .swiper-slide:hover::before {
     background-color: transparent;
   }
-  #game .slick .slick-dots {
-    right: 0;
+}
+@media (max-width: 768px) {
+  #game {
+    background-image: url(../img/bg/game-bg-m.jpg);
+    background-size: cover;
+  }
+  #game .container {
+    margin-bottom: 5.75rem;
+  }
+  #game .swiper {
+    border-radius: 1.875rem 1.875rem 0 0;
   }
 }
 
 #nft {
   position: relative;
-  padding: 3.75rem 3.75rem 52.5rem 0;
+  padding: 3.75rem 3.75rem 3.75rem 0;
+  overflow: hidden;
 }
 #nft .container {
   display: flex;
@@ -759,24 +832,20 @@ main section .container {
   top: 0;
   left: -6.25rem;
   right: -6.25rem;
-  bottom: 0;
+  bottom: -0.0625rem;
   z-index: 0;
   background-color: black;
-  background-image: url(../img/bg/nft-bg.jpg);
-  background-position: bottom center;
-  background-size: cover;
-  background-repeat: no-repeat;
   -webkit-clip-path: polygon(0 6.25rem, 100% 14.375rem, 100% 100%, 0% 100%);
           clip-path: polygon(0 6.25rem, 100% 14.375rem, 100% 100%, 0% 100%);
 }
 @media (max-width: 1440px) {
   #nft {
-    padding: 4.1666666667svw 4.1666666667svw 58.3333333333svw 0;
+    padding: 4.1666666667svw 4.1666666667svw 4.1666666667svw 0;
   }
 }
 @media (max-width: 1024px) {
   #nft {
-    padding: 3.75rem 1rem 3.75rem 0;
+    padding: 3.75rem 1rem 0 0;
   }
   #nft .container {
     flex-wrap: wrap;
@@ -809,12 +878,14 @@ main section .container {
             clip-path: polygon(0 0, 100% 8.125rem, 100% 100%, 0% 100%);
   }
 }
-
 #tutorial {
   position: relative;
-  margin: -41.25rem auto 0;
+  margin: 0 auto;
   z-index: 1;
-  padding: 3.75rem;
+  padding: 13.75rem 3.75rem 3.75rem;
+  background-image: url(../img/bg/toturial-bg.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 #tutorial .title {
   width: 26.875rem;
@@ -851,14 +922,13 @@ main section .container {
   bottom: calc(100% - 0.0625rem);
   right: 0;
   transform: rotateX(180deg);
+  z-index: -1;
 }
 @media (max-width: 1440px) {
   #tutorial {
-    margin: -45.8333333333svw auto 0;
-    padding: 4.1666666667svw;
+    padding: 15.2777777778svw 4.1666666667svw 4.1666666667svw;
   }
   #tutorial .content {
-    margin-top: 2.7777777778svw;
     padding: 7.7777777778svw 7.7777777778svw 0;
   }
   #tutorial .content .tab-content li img {
@@ -870,20 +940,46 @@ main section .container {
 }
 @media (max-width: 1024px) {
   #tutorial {
-    margin-top: 0;
+    padding: 1.25rem 0;
+  }
+  #tutorial .title {
+    padding: 0 1rem;
+  }
+  #tutorial .content {
+    border-radius: 0;
+    padding: 2rem 1rem;
+  }
+  #tutorial .content::before {
+    right: -16.25rem;
   }
 }
-
 #zkz {
   background-image: url(../img/bg/zkz-bg.jpg);
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   height: 45svw;
+  position: relative;
 }
 #zkz .container {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: inherit;
+  z-index: 1;
+}
+#zkz::before, #zkz::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 0;
+}
+#zkz::before {
+  content: url(../img/bg/zkz-mask-top.png);
+  top: 0;
+}
+#zkz::after {
+  content: url(../img/bg/zkz-mask-bottom.png);
+  bottom: 0;
 }
 @media (max-width: 1440px) {
   #zkz {
@@ -903,54 +999,44 @@ h6 {
 
 .title-xl {
   font-size: 3.75rem;
-  font-weight: 500;
 }
 
 h1 {
   font-size: 2.5rem;
-  font-weight: 500;
 }
 
 h2 {
   font-size: 2.125rem;
-  font-weight: 500;
 }
 
 h3 {
   font-size: 1.5rem;
-  font-weight: 500;
 }
 
 h4 {
   font-size: 1.25rem;
-  font-weight: 500;
 }
 
 h5 {
   font-size: 1.125rem;
-  font-weight: 500;
 }
 
 h6 {
   font-size: 1rem;
-  font-weight: 500;
 }
 
 .body-1 {
   font-size: 1.125rem;
-  font-weight: 500;
   line-height: 1.5;
 }
 
 .body-2 {
   font-size: 0.9375rem;
-  font-weight: 500;
   line-height: 1.5;
 }
 
 .capital {
   font-size: 0.875rem;
-  font-weight: 500;
 }
 
 a {
@@ -966,7 +1052,6 @@ a {
 
 #login ul li, .tab li span, body, #tutorial .content .tab-content li p {
   font-size: 1.125rem;
-  font-weight: 500;
   line-height: 1.5;
 }
 
@@ -975,57 +1060,45 @@ input[type=button],
 input[type=submit],
 a.button, header, header .login button, #nft .carousel .swiper-slide .content .caption p {
   font-size: 0.9375rem;
-  font-weight: 500;
   line-height: 1.5;
 }
 
 .tags li {
   font-size: 0.875rem;
-  font-weight: 500;
 }
 
 @media (max-width: 1280px) {
   .title-xl {
-    font-size: 3.75rem;
-    font-weight: 500;
+    font-size: 1.875rem;
   }
   h1 {
     font-size: 1.5rem;
-    font-weight: 500;
   }
   h2 {
     font-size: 1.25rem;
-    font-weight: 500;
   }
   h3 {
     font-size: 1.125rem;
-    font-weight: 500;
   }
   h4 {
     font-size: 1rem;
-    font-weight: 500;
   }
   h5 {
     font-size: 0.9375rem;
-    font-weight: 500;
   }
   h6 {
     font-size: 0.875rem;
-    font-weight: 500;
   }
   .body-1 {
     font-size: 0.9375rem;
-    font-weight: 500;
     line-height: 1.3;
   }
   .body-2 {
     font-size: 0.8125rem;
-    font-weight: 500;
     line-height: 1.3;
   }
   .capital {
     font-size: 0.75rem;
-    font-weight: 500;
   }
 }
 button,
@@ -1312,11 +1385,13 @@ header .login button[disabled] {
   transition-property: background-color;
   transition-delay: 0.15s;
 }
-.tab li:hover {
-  color: #9d4043;
-}
-.tab li:hover span {
-  background-color: #9d4043;
+@media (hover: hover) {
+  .tab li:hover {
+    color: #9d4043;
+  }
+  .tab li:hover span {
+    background-color: #9d4043;
+  }
 }
 .tab li.active {
   background-color: black;
@@ -1393,6 +1468,28 @@ header .login button[disabled] {
     left: -6.9444444444svw;
     right: -6.9444444444svw;
     bottom: -1.3888888889svw;
+  }
+}
+@media (max-width: 1024px) {
+  .tab-content {
+    height: 41.6666666667svw;
+  }
+}
+@media (max-width: 768px) {
+  .tab li h4 {
+    display: none;
+  }
+  .tab-content {
+    height: 31.875rem;
+  }
+  .tab-content li {
+    padding: 2rem;
+  }
+  .tab-content::before {
+    top: 7.5rem;
+    left: -7.5rem;
+    right: -7.5rem;
+    bottom: 7.5rem;
   }
 }
 .popUp {
@@ -1482,97 +1579,6 @@ header .login button[disabled] {
   background-color: #3a3a3a;
 }
 
-.slick .slick-track {
-  transition-duration: 0s;
-}
-.slick .slick-arrow {
-  width: 3.75rem;
-  height: 3.75rem;
-  top: auto;
-  bottom: 1.25rem;
-  transform: none;
-  padding: 0.5625rem;
-  z-index: 2;
-  border-radius: 6.25rem;
-}
-.slick .slick-arrow:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-}
-.slick .slick-arrow[disabled], .slick .slick-arrow.slick-disabled {
-  color: #3a3a3a;
-  cursor: default;
-}
-.slick .slick-arrow[disabled]:hover, .slick .slick-arrow.slick-disabled:hover {
-  background-color: transparent;
-}
-.slick .slick-arrow::before {
-  font-family: "icomoon";
-  font-size: 2.5rem;
-}
-.slick .slick-arrow.slick-prev {
-  left: auto;
-  right: 7.5rem;
-}
-.slick .slick-arrow.slick-prev::before {
-  content: "\e904";
-}
-.slick .slick-arrow.slick-next {
-  right: 2.5rem;
-}
-.slick .slick-arrow.slick-next::before {
-  content: "\e905";
-}
-.slick .slick-dots {
-  bottom: auto;
-  top: 50%;
-  right: 2.5rem;
-  transform: translate(50%, 0) rotate(90deg);
-}
-.slick .slick-dots li {
-  width: 0.375rem;
-  height: 0.375rem;
-  margin: 0 0.375rem;
-  transition-property: width;
-}
-.slick .slick-dots li button {
-  width: 0.375rem;
-  height: 0.375rem;
-  border-radius: 6.25rem;
-  padding: 0;
-  background-color: #757575;
-  opacity: 1;
-  transition-property: width;
-}
-.slick .slick-dots li button::before {
-  content: "";
-}
-.slick .slick-dots li.slick-active {
-  width: 3.5rem;
-}
-.slick .slick-dots li.slick-active button {
-  width: 3.5rem;
-  background-color: white;
-}
-.slick.dark .slick-arrow::before {
-  color: black;
-}
-.slick.dark .slick-arrow:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-.slick.dark .slick-arrow[disabled], .slick.dark .slick-arrow.slick-disabled {
-  color: #6c1619;
-  cursor: default;
-}
-.slick.dark .slick-arrow[disabled]:hover, .slick.dark .slick-arrow.slick-disabled:hover {
-  background-color: transparent;
-}
-.slick.dark .slick-dots li button {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-.slick.dark .slick-dots li.slick-active button {
-  background-color: black;
-}
-
 .swiper-button-prev, .swiper-button-next {
   width: 3.75rem;
   height: 3.75rem;
@@ -1630,4 +1636,19 @@ header .login button[disabled] {
 .swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
   width: 3.5rem;
   background-color: white;
+}
+
+.carousel.dark .swiper-button-prev,
+.carousel.dark .swiper-button-next {
+  color: black;
+}
+.carousel.dark .swiper-button-prev:hover,
+.carousel.dark .swiper-button-next:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.carousel.dark .swiper-pagination-bullets .swiper-pagination-bullet {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.carousel.dark .swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: black;
 }
