--- a/pre/scss/components/_font.scss
+++ b/pre/scss/components/_font.scss
@@ -9,45 +9,45 @@ h6 {
 }
 
 .title-xl {
-    @include font(60);
+    font-size: size(60);
 }
 
 h1 {
-    @include font(40);
+    font-size: size(40);
 }
 
 h2 {
-    @include font(34);
+    font-size: size(34);
 }
 
 h3 {
-    @include font(24);
+    font-size: size(24);
 }
 
 h4 {
-    @include font(20);
+    font-size: size(20);
 }
 
 h5 {
-    @include font(18);
+    font-size: size(18);
 }
 
 h6 {
-    @include font(16);
+    font-size: size(16);
 }
 
 .body-1 {
-    @include font(18);
+    font-size: size(18);
     line-height: 1.5;
 }
 
 .body-2 {
-    @include font(15);
+    font-size: size(15);
     line-height: 1.5;
 }
 
 .capital {
-    @include font(14);
+    font-size: size(14);
 
 }
 
@@ -56,60 +56,60 @@ a {
 }
 
 %body-1 {
-    @include font(18);
+    font-size: size(18);
     line-height: 1.5;
 }
 
 %body-2 {
-    @include font(15);
+    font-size: size(15);
     line-height: 1.5;
 }
 
 %capital {
-    @include font(14);
+    font-size: size(14);
 }
 
 @include max-to(laptop) {
     .title-xl {
-        @include font(60);
+        font-size: size(30);
     }
 
     h1 {
-        @include font(24);
+        font-size: size(24);
     }
 
     h2 {
-        @include font(20);
+        font-size: size(20);
     }
 
     h3 {
-        @include font(18);
+        font-size: size(18);
     }
 
     h4 {
-        @include font(16);
+        font-size: size(16);
     }
 
     h5 {
-        @include font(15);
+        font-size: size(15);
     }
 
     h6 {
-        @include font(14);
+        font-size: size(14);
     }
 
     .body-1 {
-        @include font(15);
+        font-size: size(15);
         line-height: 1.3;
     }
 
     .body-2 {
-        @include font(13);
+        font-size: size(13);
         line-height: 1.3;
     }
 
     .capital {
-        @include font(12);
+        font-size: size(12);
 
     }
 }
