--- a/pre/scss/layout/_footer.scss
+++ b/pre/scss/layout/_footer.scss
@@ -1,22 +1,56 @@
 footer {
     background-color: black;
-    background-image: url(../img/Rounded-Mask.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 9svw;
+    height: size(120);
+    position: relative;
+
+    .mask {
+        position: absolute;
+        top: size(-1);
+        left: calc(100svw - svw(380));
+        right: size(31);
+        height: size(60);
+        background-color: color(primary);
+        z-index: 0;
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            height: size(60);
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+
+        &::before {
+            right: calc(100% - size(1));
+            background-image: url(../img/maskbar-after.svg);
+            background-position: bottom left;
+            width: size(80);
+            transform: rotate(180deg);
+        }
+
+        &::after {
+            left: calc(100% - size(1));
+            background-image: url(../img/maskbar-before-in.svg);
+            background-position: bottom right;
+            width: size(32);
+        }
+    }
 
     .sns {
+        position: inherit;
         width: 100svw;
         padding: 0 size(30);
         display: flex;
         justify-content: flex-end;
         gap: size(20);
+        z-index: 1;
 
         li {
             button {
-                // font-size: size(20);
-                font-size: 1.4svw;
-                padding: .8svw;
+                font-size: size(20);
+                padding: size(11);
             }
         }
     }
