--- a/pre/scss/components/_swiper-custom.scss
+++ b/pre/scss/components/_swiper-custom.scss
@@ -50,6 +50,7 @@
     }
 
     &-pagination-bullets {
+        z-index: 3 !important;
         bottom: auto !important;
         top: 50%;
         right: size(40);
