--- a/pre/scss/components/_buttons.scss
+++ b/pre/scss/components/_buttons.scss
@@ -12,7 +12,7 @@ a.button {
     border-radius: size(10);
     padding: size(10) size(24);
     transition-property: background-color;
-    @extend %body-2;
+    @include body-2;
 
     &:hover {
         background-color: color(primary-6);
