--- a/pre/scss/components/_dropdown.scss
+++ b/pre/scss/components/_dropdown.scss
@@ -8,7 +8,7 @@
         border-radius: size(10);
         transition-property: background-color;
         padding: size(10) size(24);
-        @extend %body-2;
+        @include body-2;
 
         &:hover {
             background-color: rgba(white, .15);
@@ -30,7 +30,7 @@
         border-radius: size(20);
         box-shadow: 0 0 size(20) 0 rgba(black, .25);
         background-color: color(primary);
-        @extend %body-2;
+        @include body-2;
         overflow: hidden;
         height: auto;
         max-height: 0;
