--- a/pre/scss/components/_font.scss
+++ b/pre/scss/components/_font.scss
@@ -55,20 +55,6 @@ a {
     @include a-color(white, color(gray-2));
 }
 
-%body-1 {
-    font-size: size(18);
-    line-height: 1.5;
-}
-
-%body-2 {
-    font-size: size(15);
-    line-height: 1.5;
-}
-
-%capital {
-    font-size: size(14);
-}
-
 @include max-to(laptop) {
     .title-xl {
         font-size: size(30);
@@ -111,5 +97,35 @@ a {
     .capital {
         font-size: size(12);
 
+    }
+}
+
+
+@mixin body-1 {
+    font-size: size(18);
+    line-height: 1.5;
+
+    @include max-to(laptop) {
+        font-size: size(15);
+        line-height: 1.3;
+    }
+}
+
+@mixin body-2 {
+    font-size: size(15);
+    line-height: 1.5;
+
+    @include max-to(laptop) {
+        font-size: size(13);
+        line-height: 1.3;
+    }
+}
+
+@mixin capital {
+    font-size: size(14);
+    font-weight: weight(Medium);
+
+    @include max-to(laptop) {
+        font-size: size(12);
     }
 }
