--- a/pre/scss/components/_tab.scss
+++ b/pre/scss/components/_tab.scss
@@ -26,7 +26,7 @@
             justify-content: center;
             background-color: color(gray-9);
             color: color(primary-6);
-            @extend %body-1;
+            @include body-1;
             font-weight: weight(Bold);
             border-radius: size(100);
             transition-property: background-color;
