--- a/pre/scss/components/_tags.scss
+++ b/pre/scss/components/_tags.scss
@@ -7,7 +7,7 @@
         background-color: rgba(white, .2);
         padding: size(4) size(12);
         border-radius: size(4);
-        @extend %capital;
+        @include capital;
     }
 
 
