--- a/pre/scss/layout/_main.scss
+++ b/pre/scss/layout/_main.scss
@@ -1,9 +1,11 @@
 main {
+    margin-top: size(85);
     background-color: color(primary);
     border-bottom-left-radius: size(30);
-    padding-bottom: size(30);
+    padding: size(40) 0;
 
     section {
+        overflow: hidden;
         padding: size(20) calc((100svw - size(1440))/2);
 
         .container {
@@ -12,16 +14,22 @@ main {
         }
     }
 
+
     // PC ~ 1440
     @include max-to(pc) {
         section {
             padding: size(20) size(20);
         }
     }
+
+    // mobile ~ 516
+    @include max-to(mobile) {
+        margin-top: size(60);
+    }
 }
 
 #keyvision {
-    margin: size(85) auto 0;
+    margin: size(-40) auto 0;
     padding: 0 size(20);
     max-width: size(1440);
     position: relative;
@@ -158,16 +166,24 @@ main {
         }
 
         .mask {
-            top: calc(((100svw - size(32)) * .939) - size(60) + size(1));
+            top: calc(((100svw - size(32)) * .936) - size(60) + size(1));
         }
 
         .captions {
             height: size(200);
         }
     }
+
+
+    // mobile ~ 516
+    @include max-to(mobile) {
+        .mask {
+            top: calc(((100svw - size(32)) * .949) - size(60) + size(1));
+        }
+    }
 }
 
-#game {
+#game-idx {
     background-image: url(../img/bg/game-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -292,7 +308,7 @@ main {
     }
 
 
-    // PC ~ 1440
+    // mobile ~ 1440
     @include max-to(pc) {
         .container {
             padding: svw(150) svw(60) svw(50);
@@ -421,7 +437,7 @@ main {
 
                         p {
                             margin-top: size(8);
-                            @extend %body-2;
+                            @include body-2;
                         }
 
                         .tags {
@@ -500,7 +516,7 @@ main {
     }
 
 
-    // PC ~ 1440
+    // mobile ~ 1440
     @include max-to(pc) {
         padding: svw(60) svw(60) svw(60) 0;
     }
@@ -593,7 +609,7 @@ main {
 
                 p {
                     margin: size(8) auto size(32);
-                    @extend %body-1;
+                    @include body-1;
                 }
 
                 button {
